Updated to work with Java 21